docker/docker:kubernetes/env-from-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: secret-env-example
spec:
  containers:
  - name: my-container
    image: busybox
    args: ['tail', '-f', '/dev/null']
    volumeMounts:
      - name: secret-volume 
        mountPath: /etc/secret
  volumes:
  - name: secret-volume
    secret:
      secretName: our-password
      items:
        - key: pw1
          path: password1 # /etc/config/password1 = pw1
